<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/warpcontent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"> 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView 
        	android:id="@+id/textView"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content" 
      	  	android:text="@string/montior"
      	  	android:textSize="20sp"
      	  	android:layout_centerVertical="true"
      	  	android:layout_marginLeft="5dp"/>
   		<Switch
        	android:id="@+id/switchView"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textOn="@string/on"
        	android:textOff="@string/off"
        	android:checked="true"
        	android:layout_toRightOf="@id/textView"
        	android:layout_centerVertical="true"
        	android:layout_marginLeft="0dp"/>   
    </RelativeLayout> 
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="20dp">
        <Button
            android:id="@+id/addTelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTel"
            android:layout_alignParentRight="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:background="@drawable/addbtn_danger_rounded"
            android:textColor="@color/text_font_white"/>
        <Button
            android:id="@+id/clearTelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearTel"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:background="@drawable/addbtn_danger_rounded"
            android:textColor="@color/text_font_white"/>
	</RelativeLayout>
    <ListView
        android:id="@+id/list_phoneNum"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

 </LinearLayout>